<resources>
    <string name="app_name">The English Premier League Players Profiles</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_name">Player Name</string>
    <string name="player_name">Player Name</string>
    <string name="nationality">Nationality</string>
    <string name="height">Height</string>
    <string name="position">Position</string>
    <string name="wage">Wage</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="name">Name</string>
    <string name="desc">Full Description</string>
    <string name="team_name">Team Name</string>
</resources>
