<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="@dimen/marg_lay_8"
    app:cardElevation="5dp"
    app:cardCornerRadius="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/parent_padd">

        <TextView
            android:id="@+id/tv_player_name_db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marg_lay_8"
            android:layout_marginTop="@dimen/tv_top_end"
            android:layout_marginEnd="@dimen/marg_lay_8"
            tools:text="@string/player_name"
            android:textSize="@dimen/tv_name_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.064"
            app:layout_constraintStart_toEndOf="@+id/iv_team_logo_db"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date_born_db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marg_lay_8"
            android:layout_marginEnd="@dimen/marg_lay_8"
            android:ellipsize="end"
            tools:text="Date Born"
            android:textSize="@dimen/tv_name_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_player_name_db"
            app:layout_constraintTop_toBottomOf="@+id/tv_player_name_db" />

        <TextView
            android:id="@+id/tv_nationality_db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marg_lay_8"
            android:layout_marginEnd="@dimen/marg_lay_8"
            android:ellipsize="end"
            tools:text="@string/nationality"
            android:textSize="@dimen/tv_name_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_date_born_db"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_born_db" />

        <TextView
            android:id="@+id/tv_height_db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marg_lay_8"
            android:layout_marginEnd="@dimen/marg_lay_8"
            android:ellipsize="end"
            tools:text="@string/height"
            android:textSize="@dimen/tv_name_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_nationality_db"
            app:layout_constraintTop_toBottomOf="@+id/tv_nationality_db" />

        <TextView
            android:id="@+id/tv_position_db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marg_lay_8"
            android:layout_marginEnd="@dimen/marg_lay_8"
            android:ellipsize="end"
            tools:text="@string/position"
            android:textSize="@dimen/tv_name_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_height_db"
            app:layout_constraintTop_toBottomOf="@+id/tv_height_db" />

        <TextView
            android:id="@+id/tv_wage_db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marg_lay_8"
            android:layout_marginEnd="@dimen/marg_lay_8"
            android:ellipsize="end"
            tools:text="@string/wage"
            android:textSize="@dimen/tv_name_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_position_db"
            app:layout_constraintTop_toBottomOf="@+id/tv_position_db" />

        <ImageView
            android:id="@+id/iv_team_logo_db"
            android:layout_width="133dp"
            android:layout_height="187dp"
            android:layout_marginStart="@dimen/img_marg_all"
            android:layout_marginTop="@dimen/img_marg_all"
            android:layout_marginBottom="@dimen/img_marg_all"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.173"
            tools:srcCompat="@mipmap/ic_launcher" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>